overlays/uksouth-tools/cluster-autodiscover-api/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cluster-autodiscover
    component: api
  name: cluster-autodiscover-api
  namespace: default
spec:
  selector:
    matchLabels:
      app: cluster-autodiscover
      component: api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
        kubectl.kubernetes.io/default-container: app
      labels:
        app: cluster-autodiscover
        component: api
    spec:
      containers:
        - image: binkcore.azurecr.io/kube-autodiscover-api:latest
          imagePullPolicy: Always
          name: app
          ports:
            - containerPort: 9000
              protocol: TCP
          resources:
            limits:
              memory: 64Mi
              cpu: 250m
            requests:
              memory: 64Mi
              cpu: 50m
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: binkcore.azurecr.io
