overlays/uksouth-tools/cluster-autodiscover-api/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
  name: cluster-autodiscover.${cluster_name}.${location}.bink.sh
  namespace: default
spec:
  rules:
    - host: cluster-autodiscover.${cluster_name}.${location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cluster-autodiscover-api
                port:
                  number: 80
  tls:
    - hosts:
        - cluster-autodiscover.${cluster_name}.${location}.bink.sh
